fix: [CDS-41489]: fixed alignment and button css in ssh connection test (#10946)
* fix: [CDS-41489]: fixed aligned and button css in ssh connection test

* fix: [CDS-41489]: updated snapshots

--- a/src/modules/30-secrets/modals/CreateSSHCredModal/useCreateSSHCredModal.module.scss
+++ b/src/modules/30-secrets/modals/CreateSSHCredModal/useCreateSSHCredModal.module.scss
@@ -6,7 +6,7 @@
  */
 
 :root {
-  --form-input-shadow: var(--bp3-intent-color, #dddddd);
+  --form-input-shadow: var(--bp3-intent-color, rgb(221, 221, 221));
 }
 .dialog {
   position: relative;
@@ -20,7 +20,7 @@
   position: relative;
   padding-bottom: 0;
   width: 500px;
-  height: 500px;
+  min-height: 500px;
   padding: var(--spacing-large);
 }
 .crossIcon {
